# teo-openrave-models

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/workflows/: docker.yml
cmake/template/: TEO_OPENRAVE_MODELSConfig.cmake.in
doc/: groups.dox  main.dox  teo-openrave-models-install.md
docker/: Dockerfile
openrave/: CMakeLists.txt  floor.kinbody.xml  teo_dextra.robot.xml  teo_lacqueyFetch.robot.xml  teo_lacqueyFetch_rotated.robot.xml
openrave/dextra/: leftDextra.kinbody.xml  leftDextra.robot.xml  rightDextra.kinbody.xml  rightDextra.robot.xml
openrave/dextra/wrls/: Abductor_1.wrl  Distal.wrl  Middle.wrl  ProximalThumb.wrl  muneca.wrl
openrave/grasping/: bottle.kinbody.xml  box.kinbody.xml  lab.env.xml  table.kinbody.xml  tool.kinbody.xml
openrave/lacqueyFetch/: lacqueyFetch.kinbody.xml  lacqueyFetch.robot.xml
openrave/teo/: hand_rightarm.robot.xml  lacqueyFetch.kinbody.xml  leftDextra.kinbody.xml  rightDextra.kinbody.xml  rightDextra.robot.xml  teo.robot.xml  teo_dextra.robot.xml  teo_dextraLeftHand.kinbody.xml  teo_dextraRightHand.kinbody.xml  teo_hand.kinbody.xml  teo_hand.robot.xml  teo_head.kinbody.xml  teo_lacqueyFetch.robot.xml  teo_lacqueyFetch_rotated.robot.xml  teo_leftArm.kinbody.xml  teo_leftHand.kinbody.xml  teo_leftLeg.kinbody.xml  teo_rightArm.kinbody.xml  teo_rightHand.kinbody.xml  teo_rightLeg.kinbody.xml  teo_trunk.kinbody.xml
openrave/teo/models/: 6.2^mano_abductor_links.wrl  6.3^mano_proximal_links.wrl
openrave/teo/wrls/: AxialLeftHip.wrl  AxialLeftShoulder.wrl  AxialLeftWrist.wrl  AxialNeck.wrl  AxialRightHip.wrl  AxialRightShoulder.wrl  AxialRightWrist.wrl  AxialWaist.wrl  FrontalLeftAnkle.wrl  FrontalLeftElbow.wrl  FrontalLeftHip.wrl  FrontalLeftKnee.wrl  FrontalLeftShoulder.wrl  FrontalLeftWrist.wrl  FrontalNeck.wrl  FrontalRightAnkle.wrl  FrontalRightElbow.wrl  FrontalRightHip.wrl  FrontalRightShoulder.wrl  FrontalRightWrist.wrl  RootWaist.wrl  (+7 more)
scripts/bash/: README.md  generateConvexdecomposition.sh  generateDae.sh  generateInversekinematics.sh  generateInversereachability.sh  generateKinematicreachability.sh  generateZae.sh
scripts/python/: generateConvexDecomposition.py  generateIkfast.py  generateInversekinematics.py  generateKinematicreachability.py  generateReachability.py
(+23 files in other folders)
